[tool.poetry]
name = "pdf-data-extractor"
version = "0.1.0"
description = ""
authors = ["kaypee90 <kaypee90@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyMuPDF = "^1.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
